# wxBaseMultiOS

./: .gitignore  CMakeLists.txt  Info.plist  README.md  application.manifest  icon_mac.icns  icon_mac_lin.xpm  rc.rc  vBoxBigSur.txt
src/: main.cpp  manifest.manifest
